--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,22 @@
+table {
+    border-collapse: collapse;
+    width: 100%;
+  }
 
-/* Your CSS Code here. */
+  /* Style table headers */
+  th {
+    border: 1px solid #dddddd;
+    padding: 8px;
+    text-align: centre;
+  }
+
+  /* Style table rows */
+  td {
+    border: 1px solid #dddddd;
+    padding: 8px;
+    text-align: center; /* Center align table data */
+  }
+#black {
+	background-color:black;
+	color: white;
+}
